# hacana

./: hacana.cabal
.devcontainer/: compose.yaml  devcontainer.json
source/executable/: Main.hs
source/test-suite/: Main.hs
