cabal-version: 2.2

name: hacana
version: 0.2023.3.30
synopsis: TODO
description:
  TODO
  TODO

category: Documentation
maintainer: Taylor Fausak
license: MIT
license-file: LICENSE.txt

source-repository head
  location: https://github.com/tfausak/hacana
  type: git

flag pedantic
  default: False
  manual: True

common library
  build-depends: base ^>= 4.18.0
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import: library

  build-depends: hacana
  ghc-options: -rtsopts -threaded

library
  import: library

  autogen-modules: Paths_hacana
  build-depends:
    , async ^>= 2.2.4
    , bytestring ^>= 0.11.4
    , Cabal-syntax ^>= 3.10.1
    , containers ^>= 0.6.7
    , cryptonite ^>= 0.30
    , exceptions ^>= 0.10.7
    , filepath ^>= 1.4.100
    , hspec ^>= 2.10.10
    , http-client ^>= 0.7.13
    , http-client-tls ^>= 0.3.6
    , http-types ^>= 0.12.3
    , memory ^>= 0.18.0
    , resource-pool ^>= 0.4.0
    , sqlite-simple ^>= 0.4.18
    , stm ^>= 2.5.1
    , tar ^>= 0.5.1
    , text ^>= 2.0.2
    , time ^>= 1.12.2
    , zlib ^>= 0.6.3
  default-extensions:
    DerivingVia
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    TypeApplications
  exposed-modules:
    Hacana
    Hacana.Exception.InvalidOption
    Hacana.Exception.UnexpectedArgument
    Hacana.Exception.UnknownOption
    Hacana.Executable
    Hacana.Extra.Either
    Hacana.Extra.Maybe
    Hacana.Model.Blob
    Hacana.Model.File
    Hacana.Model.HackageIndex
    Hacana.Model.Preference
    Hacana.TestSuite
    Hacana.Type.Config
    Hacana.Type.Constraint
    Hacana.Type.Context
    Hacana.Type.Flag
    Hacana.Type.Hash
    Hacana.Type.Key
    Hacana.Type.Model
    Hacana.Type.PackageName
    Hacana.Type.Path
    Hacana.Type.Revision
    Hacana.Type.VersionNumber
  hs-source-dirs: source/library
  other-modules:
    Hacana.Extra.EitherSpec
    Hacana.Extra.MaybeSpec
    HacanaSpec
    Paths_hacana

executable hacana
  import: executable

  hs-source-dirs: source/executable
  main-is: Main.hs

test-suite hacana-test-suite
  import: executable

  hs-source-dirs: source/test-suite
  main-is: Main.hs
  type: exitcode-stdio-1.0
